--- a/Week 4 Website/Feed.html
+++ b/Week 4 Website/Feed.html
@@ -11,7 +11,23 @@
         <div class="grow">
             <a href="Books.html">A Series of Tubes</a></h1>
 
+            <div class="sidenav">
+                <h5>Meowballz Site</h5>
+                <a href="index.html">About</a>
+                <a href="Feed.html">Pirating</a>
+                <a href="Books.html">Books</a>
+                <a href="#">More Coming Soon</a>
+              </div>
+              
+            <div class="resources" class="grow">
 
+                <ul>
+                <li><a target="_blank" href="https://github.com/Igglybuff/awesome-piracy">Guide to Piracy</a></li>
+                <li><a target="_blank" href="https://github.com/iamadamdev/bypass-paywalls-chrome">Paywall Bypass (Chrome)</a></l1>
+                <li><a target="_blank" href="https://github.com/fmhy/FMHY/wiki/%F0%9F%93%BA-Movies---TV---Anime---Sports">Movie & TV Megathread</a></l1>
+                <li><a target="_blank" href="http://queerdigital.com/">Queer Digital Project</a></l1>
+                 </ul>
+            </div>
         <div class="tweets">
         <a class="twitter-timeline" data-width="300" data-height="300" data-theme="dark" href="https://twitter.com/dazegxd1k?ref_src=twsrc%5Etfw"></a> 
         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -26,14 +42,7 @@
          <div class="resources">
     </div>
 </div>
-    <div class="resources" class="grow">
 
-        <ul>
-        <li><a target="_blank" href="https://github.com/Igglybuff/awesome-piracy">Guide to Piracy</a></li>
-        <li><a target="_blank" href="https://github.com/iamadamdev/bypass-paywalls-chrome">Paywall Bypass (Chrome)</a></l1>
-        <li><a target="_blank" href="https://github.com/fmhy/FMHY/wiki/%F0%9F%93%BA-Movies---TV---Anime---Sports">Movie & TV Megathread</a></l1>
-        <li><a target="_blank" href="http://queerdigital.com/">Queer Digital Project</a></l1>
-    </ul>
     </div>
 
 </body>
