--- a/Week 4 Website/index.html
+++ b/Week 4 Website/index.html
@@ -9,10 +9,20 @@
 <body>
     <h1>
         <div class="grow">
+            
+            <video class="background-clip" autoplay loop muted plays-inline >
+                <source src="Videos/gum_live.mp4" type="video.mp4">
+             </video>
             <a href="Feed.html">A Series of Tubes</a></h1>
+
+            <div class="sidenav">
+                <h5>Meowballz Site</h5>
+                <a href="index.html">About</a>
+                <a href="Feed.html">Pirating</a>
+                <a href="Books.html">Books</a>
+                <a href="#">More Coming Soon</a>
+              </div>
         </div>
-    <video width="500px" height="500px" controls="controls">
-        <source src="Videos/ASOT.mp4" type="video/mp4" />
-       </video>
+
 </body>
 </html>
